tests/errors/E002.zen
int main() {
    return 0;
    return 1;  /// Error E002: Unreachable code after a return statement
}